adjust min-height of page to prevent overlap w footer

--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ ul.header li a:hover {
 .page {
   width: 100%; 
   min-width: 950px;  
-  height: 450px;  
+  min-height: 450px;  
   margin: auto; 
   text-align: center; 
   padding-top: 0px; 
